<resources>
    <string name="app_name">OS13 Music Player</string>

    <string name="bottom_library">Library</string>
    <string name="bottom_search">Search</string>
    <string name="bottom_favorite">Favorite</string>
    <string name="recently_added">Recently Added</string>
    <string name="song">Song</string>
    <string name="artist">Artist</string>
    <string name="new_playlist">New Playlist</string>
    <string name="cancle">Cancel</string>
    <string name="done">Done</string>
    <string name="change">Change</string>
    <string name="add_song">Add Song</string>
    <string name="select_song">Select Song</string>
    <string name="name_playlist">Name Playlist</string>
    <string name="sort">Sort</string>
    <string name="title">Title</string>
    <string name="shuffle">SHUFFLE</string>
    <string name="Repeat">REPEAT</string>
    <string name="enter_name_playlist">Enter name playlist</string>
    <string name="no_song">There is no song with this name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="rate_app">Rate App</string>
    <string name="not_now">Not Now</string>
    <string name="rate_now">Rate Now</string>
    <string name="do_you_love_this_app_nratting_for_us">Do you love this?\nRatting for us!</string>

</resources>
