<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_190sdp"
    android:layout_height="wrap_content"

    android:background="@drawable/bg_dialog"
    android:padding="@dimen/_10sdp"
    tools:ignore="MissingConstraints">

    <TextView
        android:fontFamily="@font/font_blod"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_app"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/Black"
        app:layout_constraintBottom_toTopOf="@id/tv_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:fontFamily="@font/font_medium"
        android:textColor="@color/Black"
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/do_you_love_this_app_nratting_for_us"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:fontFamily="@font/font_blod"
        android:textColor="@color/Black"
        android:id="@+id/tv_not_now"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/btn_selected"
        android:gravity="center"
        android:text="@string/not_now"
        app:layout_constraintEnd_toStartOf="@id/tv_rate_now"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_content" />

    <TextView
        android:fontFamily="@font/font_blod"
        android:textColor="@color/Black"
        android:id="@+id/tv_rate_now"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_25sdp"
        android:background="@drawable/btn_selected"
        android:gravity="center"
        android:text="@string/rate_now"
        app:layout_constraintBottom_toBottomOf="@id/tv_not_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_not_now"
        app:layout_constraintTop_toTopOf="@id/tv_not_now" />
</android.support.constraint.ConstraintLayout>
