<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancle"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_playlist"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:layout_centerHorizontal="true"
              />
            <TextView
                android:id="@+id/tv_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:textSize="20dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorAccent"
              />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <android.support.v7.widget.CardView
                android:id="@+id/card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:cardCornerRadius="3dp"
                app:cardElevation="0dp">
            <ImageView
                android:id="@+id/iv_art"
                android:layout_width="90dp"
                android:layout_height="90dp"
               android:src="@drawable/ic_add_photo_playlist">

            </ImageView>
            </android.support.v7.widget.CardView>

            <EditText
                android:id="@+id/ed_name_playlist"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginLeft="15dp"
                android:background="@android:color/transparent"
                android:hint="@string/name_playlist"
                android:textColor="@color/colorAccent"
                android:textSize="16dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#EBEBEB">

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:id="@+id/ll_add_song">

            <ImageView
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:src="@drawable/ic_add_song" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/add_song"
                android:textColor="@color/colorAccent"
                android:textSize="18dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#EBEBEB">

        </RelativeLayout>




        <android.support.design.widget.CoordinatorLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:id="@+id/coordinatorLayout"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_new_playlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:nestedScrollingEnabled="false"
                    android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>


            </RelativeLayout>

        </android.support.design.widget.CoordinatorLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>