<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:background="#FFFFFF">

    <TextView
        android:fontFamily="@font/font_blod"
        android:id="@+id/tv_select_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/select_song"
        android:textColor="@color/colorAccent"
        android:textSize="19dp"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_dialog_add_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_select_song"
        android:layout_marginBottom="60dp">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="#EBEBEB"
            android:paddingRight="1px"
            android:paddingTop="1px">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#FFFFFF"
                android:id="@+id/rl_cancle">

                <TextView
                    android:fontFamily="@font/font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/cancle"
                    android:textColor="@color/colorAccent"
                    android:textSize="18dp" />

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="#EBEBEB"
            android:paddingRight="1px"
            android:paddingTop="1px">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#FFFFFF"
                android:id="@+id/rl_done">
                <TextView
                    android:fontFamily="@font/font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/done"
                    android:textColor="@color/colorAccent"
                    android:textSize="18dp"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>